[tool.poetry]
name = "sampleproject"
version = "0.1.0"
description = ""
authors = ["Raamu7 <ruban7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
appdirs = "1.4.4"
async-timeout = "4.0.3"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
blinker = "1.8.2"
build = "0.10.0"
cachecontrol = "0.12.11"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.0.7"
crashtest = "0.4.1"
cycler = "0.11.0"
dash = "2.17.0"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
dateparser = "1.2.0"
distlib = "0.3.6"
dulwich = "0.21.5"
filelock = "3.12.0"
flask = "3.0.3"
fonttools = "4.39.4"
frozendict = "2.3.8"
frozenlist = "1.4.1"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.6.0"
importlib-resources = "5.12.0"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.2.3"
jinja2 = "3.1.4"
jsonschema = "4.17.3"
keyring = "23.13.1"
kiwisolver = "1.4.4"
lockfile = "0.12.2"
lxml = "4.9.3"
markupsafe = "2.1.5"
mathplot = "0.1"
matplotlib = "3.7.1"
more-itertools = "9.1.0"
msgpack = "1.0.5"
multidict = "6.0.4"
multitasking = "0.0.11"
nest-asyncio = "1.6.0"
numpy = "1.24.3"
packaging = "23.1"
pandas = "2.0.1"
pexpect = "4.8.0"
pillow = "9.5.0"
pkginfo = "1.9.6"
platformdirs = "3.5.1"
plotly = "5.22.0"
poetry = "1.5.0"
poetry-core = "1.6.0"
poetry-plugin-export = "1.3.1"
ptyprocess = "0.7.0"
pycryptodome = "3.19.0"
pyparsing = "3.0.9"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-binance = "1.0.19"
python-dateutil = "2.8.2"
pytz = "2023.3"
pywin32-ctypes = "0.2.0"
rapidfuzz = "2.15.1"
regex = "2023.10.3"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
retrying = "1.3.4"
shellingham = "1.5.0.post1"
six = "1.16.0"
soupsieve = "2.5"
tenacity = "8.3.0"
tomli = "2.0.1"
tomlkit = "0.11.8"
trove-classifiers = "2023.5.2"
typing-extensions = "4.11.0"
tzdata = "2023.3"
tzlocal = "5.2"
ujson = "5.9.0"
urllib3 = "1.26.15"
virtualenv = "20.23.0"
webencodings = "0.5.1"
websockets = "12.0"
werkzeug = "3.0.3"
xlsxwriter = "3.1.0"
yarl = "1.9.4"
yfinance = "0.2.28"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
